[tool.poetry]
name = "pycounts_skysheng"
version = "0.1.0"
description = "This is a toy package I created to count the total number of words in a piece of text file."
authors = ["Sky Sheng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
