[tool.poetry]
name = "pycounts_skysheng"
version = "0.1.0"
description = "This is a toy package I created to count the total number of words in a piece of text file."
authors = ["Sky Sheng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
pytest-cov = ">=6.0.0"
jupyter = ">=1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.11"}
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
